unpackaged/main/default/objects/Modification_Option__c/Modification_Option__c.object-meta.xml
<CustomObject>
    <description>Collections Modification Options</description>
    <label>Modification Option</label>
    <nameField>
        <displayFormat>MO-{0000000}</displayFormat>
        <label>Modification Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modification Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>