unpackaged/main/default/objects/Modification_Option__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Modification Options</relationshipLabel>
    <relationshipName>Modification_Options</relationshipName>
    <type>Lookup</type>
</CustomField>