unpackaged/main/default/objects/Modification_Option__c/fields/Daily_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Daily_Payment_Amount__c</fullName>
    <label>Daily Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>