unpackaged/main/default/objects/Modification_Option__c/fields/Extended_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Maturity_Date__c</fullName>
    <label>Extended Maturity Date</label>
    <type>Date</type>
</CustomField>