unpackaged/main/default/objects/Modification_Option__c/fields/Merchant_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number__c</fullName>
    <formula>Case__r.Opportunity__r.Merchant_Number__c</formula>
    <label>Merchant Number</label>
    <type>Text</type>
</CustomField>