unpackaged/main/default/objects/Modification_Option__c/fields/Selected_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Selected_Frequency__c</fullName>
    <label>Selected Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>