unpackaged/main/default/objects/Modification_Option__c/fields/Weekly_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment_Amount__c</fullName>
    <label>Weekly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>